# Lucilla

./: CMakeLists.txt  Constants.h  HelloWorld.cl  OpenCLHelper.cpp  OpenCLHelper.h  ProcessArray.cl  ProcessArray.cpp  ProcessArray.h  README.md  main.cpp
kernels/: CalculateLight.cl  HelloWorld.cl  ProcessArray.cl
